# ImproveYourAIBot

./: .gitmodules  CMakeLists.txt  Dockerfile  get_qt.sh  httplib.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.bak  optionsmanager.h  resources.qrc  sidebar.cpp  sidebar.h  webserver.cpp  webserver.h  webviewmanager.cpp  webviewmanager.h
assets/: app.html
assets/css/: aemme.css
assets/js/: chatbot.bundle.js  settings.bundle.js.LICENSE.txt
assets/trascrizioni/: 1.json  2.json  3.json  Come utilizzo la SATURAZIONE sulle VOCI.json
